# ollama-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
research/: Ollama-rust.ipynb
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  ollama.rs  todos.rs
src-tauri/src/controllers/: chat_controller.rs  commands.rs  mod.rs
src-tauri/src/ipc/: chat.rs  mod.rs
src-tauri/src/model/: store.rs
src-tauri/src/model/types/: chat.rs  mod.rs
src-tauri/src/models/: chat.rs
src-tauri/src/ollama/: commands.rs  mod.rs  ollama.rs
src/UIKit/: index.tsx
src/UIKit/ButtonIcon/: index.tsx  styles.tsx
src/api/: api.ts  ipc.ts
src/bindings/: Chat.ts  ChatCreation.ts  ChatListItem.ts  ChatUpdate.ts  LocalLLM.ts  Message.ts  MessageSender.ts  Page.ts  index.ts
src/components/Form/: index.tsx
src/features/ChatLLM/: index.tsx
src/features/ChatLLM/Chat/: index.tsx  styles.tsx
src/features/ChatLLM/Chat/components/ChatStream/: index.tsx  styles.tsx
src/features/ChatLLM/Chat/components/ChatStream/components/DotLoader/: index.tsx  styles.tsx
src/features/ChatLLM/Chat/components/Form/: index.tsx  styles.tsx
src/features/ChatLLM/Chat/hooks/: useChatApi.tsx  useChatStream.tsx  useOllama.tsx  useStreamListener.tsx
src/features/ChatLLM/Chat/model/: types.ts
src/features/ChatLLM/Chat/utils/: invokeOllama.ts
src/features/ChatLLM/Sidebar/: index.tsx  styles.tsx
src/features/ChatLLM/Sidebar/components/ChatList/: index.tsx  styles.tsx
src/features/ChatLLM/Sidebar/components/ChatList/components/ChatListItem/: index.tsx  styles.tsx
src/features/ChatLLM/Sidebar/components/ModelSelector/: index.tsx  styles.tsx
src/features/ChatLLM/context/: Wrapper.tsx  index.tsx
src/features/ChatLLM/context/hooks/: useChatContext.tsx
src/hooks/: useStreamListener.tsx
